# common-protos

./: README.md
github.com/cncf/udpa/udpa/annotations/: BUILD.bazel  status.proto  versioning.proto
github.com/envoyproxy/data-plane-api/envoy/config/core/v3/: BUILD.bazel  base.proto
github.com/envoyproxy/data-plane-api/envoy/service/discovery/v3/: BUILD.bazel  discovery.proto
istio.io/api/operator/v1alpha1/: BUILD.bazel  operator.proto
k8s.io/api/admission/v1/: BUILD.bazel
k8s.io/api/apps/v1beta2/: BUILD.bazel
k8s.io/api/authentication/v1beta1/: BUILD.bazel
k8s.io/api/autoscaling/v1/: BUILD.bazel
k8s.io/api/batch/v1beta1/: BUILD.bazel
k8s.io/api/core/v1/: BUILD.bazel  generated.pb.go  generated.proto
k8s.io/api/storage/v1beta1/: BUILD.bazel
k8s.io/apimachinery/pkg/api/resource/: generated.pb.go
k8s.io/apimachinery/pkg/apis/meta/v1/: BUILD.bazel  generated.pb.go  generated.proto
k8s.io/apimachinery/pkg/apis/meta/v1beta1/: BUILD.bazel
k8s.io/apimachinery/pkg/runtime/: generated.pb.go
k8s.io/apimachinery/pkg/runtime/schema/: BUILD.bazel  generated.pb.go
k8s.io/apimachinery/pkg/util/intstr/: BUILD.bazel  generated.pb.go
