load("//bazel:api_build_system.bzl", "api_proto_package")
load("//bazel:api_build_system.bzl", "k8s_api_proto_package")

k8s_api_proto_package(
    deps = [
        "//common-protos/k8s.io/apimachinery/pkg/api/resource:pkg",
        "//common-protos/k8s.io/apimachinery/pkg/util/intstr:pkg",
    ],
)
