load("//bazel:api_build_system.bzl", "api_proto_package")

api_proto_package(
    strip_import_prefix = "//common-protos/github.com/envoyproxy/data-plane-api",
    deps = [
        "//common-protos/github.com/cncf/udpa/udpa/annotations:pkg",
        "//common-protos/github.com/envoyproxy/data-plane-api/envoy/config/core/v3:pkg",
    ],
)
